# tfunc

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  composition-and-piping.cpp  composition-and-piping.hpp  function-composition-and-piping.cpp  function-composition-and-piping.hpp  function-currying.cpp  function-currying.hpp  monad-list.hpp  monad-optional.hpp
include/: function-composition-and-currying.hpp  function-operations.hpp  function_traits.hpp  monad-list.hpp
include/functor/: curried-fmap.hpp  flist.hpp  foptional.hpp  functor.hpp
test/: CMakeLists.txt  test-fixtures.hpp  utest-flist.cpp  utest-foptional.cpp  utest-function-composition-and-currying.cpp  utest-function-operations.cpp  utest-test-fixtures.cpp  utest-thesis-examples.cpp
